# npsimple

./: .gitignore  Android.mk  English.r  Makefile  Makefile.am  Makefile.plain  common.h  config-msvc.h  config.mk  configure.ac  npsimple-resources.rc  npsimple.c  npsimple.exports  npsimple.rc  npsimple.vcproj
